# agarwal-ai-framework

./: .gitignore  FRAMEWORK.md  README.md  package-lock.json  package.json  tsconfig.json
docs/: 01-agent-first-architecture.md  02-governance-trust-mesh.md  03-algorithm-intelligence.md  04-resilient-quantum-hybrid.md  05-workflow-autonomy-engine.md  06-adaptive-statistics.md  07-lifecycle-continuum.md  glossary.md  maturity-model.md
metrics/: aqi-score.md  quantum-readiness-index.md
research/: future-horizons-2027-2030.md
sdk/: README.md
sdk/java/: pom.xml
sdk/java/src/main/java/ai/agarwal/agents/: Agent.java  Orchestrator.java
sdk/java/src/main/java/ai/agarwal/core/: Agarwal.java
sdk/java/src/main/java/ai/agarwal/governance/: TrustMesh.java
sdk/java/src/main/java/ai/agarwal/metrics/: AQICalculator.java
sdk/java/src/main/java/ai/agarwal/security/: SecurityShield.java
sdk/python/: pyproject.toml
sdk/python/agarwal_ai/: __init__.py  agents.py  core.py  engine.py  governance.py  knowledge.py  metrics.py  router.py  security.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/plugins/: page.tsx
src/components/: AgarwalGraph.tsx  Architecture.tsx  Footer.tsx  FutureHorizons.tsx  Hero.tsx  MaturityModel.tsx  Metrics.tsx  Navbar.tsx  ParticleField.tsx  Pillars.tsx
src/components/plugins/: APIReference.tsx  InstallGuide.tsx  LiveDemo.tsx  PackageGrid.tsx  PluginHero.tsx
templates/: agent-design-canvas.md  governance-audit-template.md  quantum-feasibility-check.md
