[project]
name = "agarwal-ai"
version = "1.0.0"
description = "AGARWAL AI Framework — A complete AI delivery & intelligence toolkit for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Agarwal AI" }]
keywords = ["ai", "agents", "llm", "governance", "quantum", "framework", "rag", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
all = ["numpy>=1.24.0", "tiktoken>=0.5.0"]
vector = ["numpy>=1.24.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agarwal_ai"]

[tool.ruff]
line-length = 120
target-version = "py39"
